_build/_log
### Starting build.
# Target: gui.mli.depends, tags: { extension:mli, file:gui.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules gui.mli > gui.mli.depends # cached
# Target: gui.cmi, tags: { byte, compile, extension:mli, file:gui.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -o gui.cmi gui.mli # cached
# Target: gui.ml.depends, tags: { extension:ml, file:gui.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules gui.ml > gui.ml.depends # cached
# Target: gui.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:gui.cmo, file:gui.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -o gui.cmo gui.ml
+ ocamlfind ocamlc -c -o gui.cmo gui.ml
File "gui.ml", line 1, characters 5-10:
1 | open GMain
         ^^^^^
Error: Unbound module GMain
Command exited with code 2.
# Compilation unsuccessful.
